Fizes Safari issue with SVG not showing up

--- a/src/components/wallet-item/wallet-item.scss
+++ b/src/components/wallet-item/wallet-item.scss
@@ -26,7 +26,7 @@
     width: rem(70);
 
     & > svg {
-      height: 100%;
+      width: 100%;
     }
   }
 
